Starter tile styled to center position

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
-@import "styles/base.scss";
-@import "styles/tile.scss";
-@import "styles/board.scss";
+@import "styles/base";
+@import "styles/tile";
+@import "styles/board";
+@import "styles/tile-positions";
