--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ body {
   margin: 0;
   position: relative;
   width: 100%; }
+
+.tile.absolute-middle {
+  position: absolute;
+  top: 50%;
+  right: auto;
+  left: 50%;
+  bottom: auto;
+  transform: translateY(-50%) translateX(-50%); }
