--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,21 @@ body {
   padding: 0; }
 
 .tile {
-  background-color: #e3ee31;
+  background-color: #FFFFFF;
   border: 1px	#4366b0 solid;
+  box-sizing: border-box;
   height: 30px;
   list-style-type: none;
   position: absolute;
+  transition: all .3s ease-in-out;
   width: 30px;
   z-index: 1; }
   .tile.ghost {
-    background-color: black;
+    background-color: #000000;
     z-index: 0; }
+    .tile.ghost:hover {
+      background-color: rgba(255, 255, 255, 0.8);
+      cursor: pointer; }
 
 .board {
   background-color: black;
