--- a/src/styles/_tile.scss
+++ b/src/styles/_tile.scss
@@ -1,13 +1,19 @@
 .tile {
-  background-color: #e3ee31;
+  background-color: #FFFFFF;
   border: 1px	#4366b0 solid;
+  box-sizing: border-box;
   height: 30px;
   list-style-type: none;
   position: absolute;
+  transition: all .3s ease-in-out;
   width: 30px;
   z-index: 1;
   &.ghost {
-    background-color: black;
+    background-color: #000000;
     z-index: 0;
+    &:hover {
+      background-color: rgba(#FFFFFF, .8);
+      cursor: pointer;
+    }
   }
 }
