--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
 
 .tile {
   background-color: #FFFFFF;
+  background-repeat: no-repeat;
+  background-size: cover;
   border: 1px	#4366b0 solid;
   box-sizing: border-box;
   list-style-type: none;
@@ -17,6 +19,54 @@ body {
     .tile.ghost:hover {
       background-color: rgba(255, 255, 255, 0.8);
       cursor: pointer; }
+  .tile.A {
+    background-image: url("./images/tiles/A.png"); }
+  .tile.B {
+    background-image: url("./images/tiles/B.png"); }
+  .tile.C {
+    background-image: url("./images/tiles/C.png"); }
+  .tile.D {
+    background-image: url("./images/tiles/D.png"); }
+  .tile.E {
+    background-image: url("./images/tiles/E.png"); }
+  .tile.F {
+    background-image: url("./images/tiles/F.png"); }
+  .tile.G {
+    background-image: url("./images/tiles/G.png"); }
+  .tile.H {
+    background-image: url("./images/tiles/H.png"); }
+  .tile.I {
+    background-image: url("./images/tiles/I.png"); }
+  .tile.J {
+    background-image: url("./images/tiles/J.png"); }
+  .tile.K {
+    background-image: url("./images/tiles/K.png"); }
+  .tile.L {
+    background-image: url("./images/tiles/L.png"); }
+  .tile.M {
+    background-image: url("./images/tiles/M.png"); }
+  .tile.N {
+    background-image: url("./images/tiles/N.png"); }
+  .tile.O {
+    background-image: url("./images/tiles/O.png"); }
+  .tile.P {
+    background-image: url("./images/tiles/P.png"); }
+  .tile.Q {
+    background-image: url("./images/tiles/Q.png"); }
+  .tile.R {
+    background-image: url("./images/tiles/R.png"); }
+  .tile.S {
+    background-image: url("./images/tiles/S.png"); }
+  .tile.T {
+    background-image: url("./images/tiles/T.png"); }
+  .tile.U {
+    background-image: url("./images/tiles/U.png"); }
+  .tile.V {
+    background-image: url("./images/tiles/V.png"); }
+  .tile.W {
+    background-image: url("./images/tiles/W.png"); }
+  .tile.X {
+    background-image: url("./images/tiles/X.png"); }
 
 .board {
   background-color: black;
