--- a/src/styles/_tile.scss
+++ b/src/styles/_tile.scss
@@ -1,5 +1,7 @@
 .tile {
   background-color: #FFFFFF;
+  background-repeat: no-repeat;
+  background-size: cover;
   border: 1px	#4366b0 solid;
   box-sizing: border-box;
   list-style-type: none;
@@ -14,4 +16,28 @@
       cursor: pointer;
     }
   }
+  &.A {background-image: url('./images/tiles/A.png');}
+  &.B {background-image: url('./images/tiles/B.png');}
+  &.C {background-image: url('./images/tiles/C.png');}
+  &.D {background-image: url('./images/tiles/D.png');}
+  &.E {background-image: url('./images/tiles/E.png');}
+  &.F {background-image: url('./images/tiles/F.png');}
+  &.G {background-image: url('./images/tiles/G.png');}
+  &.H {background-image: url('./images/tiles/H.png');}
+  &.I {background-image: url('./images/tiles/I.png');}
+  &.J {background-image: url('./images/tiles/J.png');}
+  &.K {background-image: url('./images/tiles/K.png');}
+  &.L {background-image: url('./images/tiles/L.png');}
+  &.M {background-image: url('./images/tiles/M.png');}
+  &.N {background-image: url('./images/tiles/N.png');}
+  &.O {background-image: url('./images/tiles/O.png');}
+  &.P {background-image: url('./images/tiles/P.png');}
+  &.Q {background-image: url('./images/tiles/Q.png');}
+  &.R {background-image: url('./images/tiles/R.png');}
+  &.S {background-image: url('./images/tiles/S.png');}
+  &.T {background-image: url('./images/tiles/T.png');}
+  &.U {background-image: url('./images/tiles/U.png');}
+  &.V {background-image: url('./images/tiles/V.png');}
+  &.W {background-image: url('./images/tiles/W.png');}
+  &.X {background-image: url('./images/tiles/X.png');}
 }
