Panel has rotate tile buttons

--- a/src/styles/_material-icons.scss
+++ b/src/styles/_material-icons.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 .material-icons {
-  color: $turing-dark-gray;
+  color: #FFFFFF;
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
