--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,31 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 body {
   font-family: sans-serif;
   margin: 0;
   padding: 0; }
+
+.material-icons {
+  color: #FFFFFF;
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 3em;
+  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: 'liga'; }
 
 .tile {
   background-color: #FFFFFF;
@@ -91,6 +115,9 @@ body {
     color: #FFFFFF; }
   .panel .tile {
     position: relative; }
+  .panel .material-icons {
+    cursor: pointer;
+    display: block; }
 
 .tile.absolute-middle {
   position: absolute;
